--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,14 @@
-<div id="root"></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <script src="https://kit.fontawesome.com/cc9f1d97d6.js" crossorigin="anonymous"></script>
+  <title>Github Finder</title>
+</head>
+<body>
+  <div id="root"></div>
+</body>
+</html>
